Use Case + Activity + Class diagrams

--- a/02-presentation.html
+++ b/02-presentation.html
@@ -98,10 +98,10 @@
 
     <section>
         <h3>Organisation des diagrammes</h3>
-        <p>Les diagrammes peuvent être organisés en deux catégories principales :</p>
+        <p>Les diagrammes peuvent être organisés en trois catégories principales :</p>
         <div class="container">
             <div class="col">
-                <h4>Structurels</h4>
+                <h4>Structure</h4>
                 <ul style="font-size: 0.8em;">
                     <li>Diagramme de classe</li>
                     <li>Diagramme de composants</li>
@@ -113,15 +113,20 @@
                 </ul>
             </div>
             <div class="col">
-                <h4>Comportementaux</h4>
+                <h4>Comportement</h4>
                 <ul style="font-size: 0.8em;">
                     <li>Diagramme d'activité</li>
-                    <li>Diagramme de communication</li>
-                    <li>Diagramme global d'interaction</li>
-                    <li>Diagramme de séquence</li>
                     <li>Diagramme état-machine</li>
-                    <li>Diagramme de temps</li>
                     <li>Diagramme des cas d'utilisation</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h4>Interaction</h4>
+                <ul style="font-size: 0.8em;">
+                    <li>Diagramme de communication</li>
+                    <li>Diagramme de séquence</li>
+                    <li>Diagramme de temps</li>
+                    <li>Diagramme global d'interaction</li>
                 </ul>
             </div>
         </div>
