Highlight most used UML diagram

--- a/02-presentation.html
+++ b/02-presentation.html
@@ -103,7 +103,7 @@
             <div class="col">
                 <h4>Structure</h4>
                 <ul style="font-size: 0.8em;">
-                    <li>Diagramme de classe</li>
+                    <li><strong>Diagramme de classe</strong></li>
                     <li>Diagramme de composants</li>
                     <li>Diagramme de structure composite</li>
                     <li>Diagramme de déploiement</li>
@@ -115,18 +115,18 @@
             <div class="col">
                 <h4>Comportement</h4>
                 <ul style="font-size: 0.8em;">
-                    <li>Diagramme d'activité</li>
-                    <li>Diagramme état-machine</li>
-                    <li>Diagramme des cas d'utilisation</li>
+                    <li><strong>Diagramme d'activité</strong></li>
+                    <li><strong>Diagramme état-machine</strong></li>
+                    <li><strong>Diagramme des cas d'utilisation</strong></li>
                 </ul>
             </div>
             <div class="col">
                 <h4>Interaction</h4>
                 <ul style="font-size: 0.8em;">
                     <li>Diagramme de communication</li>
-                    <li>Diagramme de séquence</li>
+                    <li><strong>Diagramme de séquence</strong></li>
                     <li>Diagramme de temps</li>
-                    <li>Diagramme global d'interaction</li>
+                    <li><strong>Diagramme global d'interaction</strong></li>
                 </ul>
             </div>
         </div>
