--- a/05-activity.html
+++ b/05-activity.html
@@ -91,7 +91,7 @@
                 </td>
             </tr>
             <tr>
-                <td>Swinlane</td>
+                <td>Swimlane</td>
                 <td><img src="assets/images/activity-swimlane.png" alt="Swimlane"></td>
                 <td>
                     <p>Permet d'identifier les acteurs dans un diagramme d'activité.</p>
